fix z-index for dashboard

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ header {
     height: 100vh;
     position: fixed;
     width: max(15vw, 200px);
+    z-index: 2;
 }
 
 .action-panel {
